--- a/samples/tcp-echo/tcp-hello-echo.yaml
+++ b/samples/tcp-echo/tcp-hello-echo.yaml
@@ -15,60 +15,39 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: tcp-echo
+  name: tcp-hello-echo
   labels:
-    app: tcp-echo
+    service: tcp-hello-echo
 spec:
   ports:
   - name: tcp
     port: 9000
   selector:
-    app: tcp-echo
+    app: tcp-hello-echo
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: tcp-echo-v1
+  name: tcp-hello-echo
+  labels:
+    app: tcp-hello-echo
+    version: v1
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: tcp-echo
+      app: tcp-hello-echo
       version: v1
   template:
     metadata:
       labels:
-        app: tcp-echo
+        app: tcp-hello-echo
         version: v1
     spec:
       containers:
-      - name: tcp-echo
+      - name: tcp-hello-echo
         image: docker.io/istio/tcp-echo-server:1.1
         imagePullPolicy: IfNotPresent
-        args: [ "9000", "one" ]
-        ports:
-        - containerPort: 9000
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: tcp-echo-v2
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: tcp-echo
-      version: v2
-  template:
-    metadata:
-      labels:
-        app: tcp-echo
-        version: v2
-    spec:
-      containers:
-      - name: tcp-echo
-        image: docker.io/istio/tcp-echo-server:1.1
-        imagePullPolicy: IfNotPresent
-        args: [ "9000", "two" ]
+        args: [ "9000", "hello" ]
         ports:
         - containerPort: 9000
