Allow configuring a specific image for kubectl

--- a/install/kubernetes/helm/istio-init/templates/job-crd-certmanager-11.yaml
+++ b/install/kubernetes/helm/istio-init/templates/job-crd-certmanager-11.yaml
@@ -13,7 +13,11 @@ spec:
       serviceAccountName: istio-init-service-account
       containers:
       - name: istio-init-crd-certmanager-11
+{{- if (hasKey .Values.global "kubectl") and (hasKey .Values.global.kubectl "image") }}
+        image: "{{ .Values.global.kubectl.image }}"
+{{- else }}
         image: "{{ .Values.global.hub }}/kubectl:{{ .Values.global.tag }}"
+{{- end }}
         imagePullPolicy: {{ .Values.global.imagePullPolicy }}
 {{- if .Values.job.resources }}
         resources:
