--- a/install/kubernetes/helm/istio/charts/grafana/templates/create-custom-resources-job.yaml
+++ b/install/kubernetes/helm/istio/charts/grafana/templates/create-custom-resources-job.yaml
@@ -81,7 +81,11 @@ spec:
       serviceAccountName: istio-grafana-post-install-account
       containers:
         - name: kubectl
+{{- if (hasKey .Values.global "kubectl") and (hasKey .Values.global.kubectl "image") }}
+          image: "{{ .Values.global.kubectl.image }}"
+{{- else }}
           image: "{{ .Values.global.hub }}/kubectl:{{ .Values.global.tag }}"
+{{- end }}
           command: [ "/bin/bash", "/tmp/grafana/run.sh", "/tmp/grafana/custom-resources.yaml" ]
           volumeMounts:
             - mountPath: "/tmp/grafana"
