--- a/install/kubernetes/helm/istio-init/templates/job-crd-mixer.yaml
+++ b/install/kubernetes/helm/istio-init/templates/job-crd-mixer.yaml
@@ -12,7 +12,11 @@ spec:
       serviceAccountName: istio-init-service-account
       containers:
       - name: istio-init-crd-mixer
+{{- if (hasKey .Values.global "kubectl") and (hasKey .Values.global.kubectl "image") }}
+        image: "{{ .Values.global.kubectl.image }}"
+{{- else }}
         image: "{{ .Values.global.hub }}/kubectl:{{ .Values.global.tag }}"
+{{- end }}
         imagePullPolicy: {{ .Values.global.imagePullPolicy }}
 {{- if .Values.job.resources }}
         resources:
