--- a/galley/pkg/config/analysis/msg/messages.yaml
+++ b/galley/pkg/config/analysis/msg/messages.yaml
@@ -142,7 +142,7 @@ messages:
     code: IST0112
     level: Error
     description: "A VirtualService routes to a service with more than one port exposed, but does not specify which to use."
-    template: "This VirtualService routes to a service %q that exposes multiple ports (%s). Specifying a port in the destination is required to disambiguate."
+    template: "This VirtualService routes to a service %q that exposes multiple ports %v. Specifying a port in the destination is required to disambiguate."
     args:
       - name: destHost
         type: string
