add grafana storage size to helm values

--- a/install/kubernetes/helm/istio/charts/grafana/templates/pvc.yaml
+++ b/install/kubernetes/helm/istio/charts/grafana/templates/pvc.yaml
@@ -15,5 +15,5 @@ spec:
     - {{ .Values.accessMode }}
   resources:
     requests:
-      storage: 5Gi
+      storage: {{ .Values.storageSize }}
 {{- end }}
