--- a/install/kubernetes/helm/istio/charts/grafana/values.yaml
+++ b/install/kubernetes/helm/istio/charts/grafana/values.yaml
@@ -21,6 +21,7 @@ ingress:
     #     - grafana.local
 persist: false
 storageClassName: ""
+storageSize: 5Gi
 accessMode: ReadWriteMany
 security:
   enabled: false
