add persist storage to prometheus

--- a/install/kubernetes/helm/istio/charts/prometheus/templates/deployment.yaml
+++ b/install/kubernetes/helm/istio/charts/prometheus/templates/deployment.yaml
@@ -34,6 +34,7 @@ spec:
           imagePullPolicy: {{ .Values.global.imagePullPolicy }}
           args:
             - '--storage.tsdb.retention={{ .Values.retention }}'
+            - '--storage.tsdb.path=/data'
             - '--config.file=/etc/prometheus/prometheus.yml'
           ports:
             - containerPort: 9090
@@ -57,6 +58,8 @@ spec:
             mountPath: /etc/prometheus
           - mountPath: /etc/istio-certs
             name: istio-certs
+          - mountPath: /data
+            name: data
       volumes:
       - name: config-volume
         configMap:
@@ -68,6 +71,13 @@ spec:
           optional: true
 {{- end }}
           secretName: istio.default
+      - name: data
+{{- if .Values.persist }}
+        persistentVolumeClaim:
+          claimName: prometheus-pvc
+{{- else }}
+        emptyDir: {}
+{{- end }}
       affinity:
       {{- include "nodeaffinity" . | indent 6 }}
       {{- include "podAntiAffinity" . | indent 6 }}
