--- a/install/kubernetes/helm/istio/charts/grafana/values.yaml
+++ b/install/kubernetes/helm/istio/charts/grafana/values.yaml
@@ -115,3 +115,10 @@ dashboardProviders:
         disableDeletion: false
         options:
           path: /var/lib/grafana/dashboards/istio
+
+customDashboards: {}
+  # kubernetes.json: |
+  #   {
+  #     "description": "",
+  #     ...
+  #   }
