--- a/tests/integration/telemetry/stats/prometheus/testdata/stats_filter.yaml
+++ b/tests/integration/telemetry/stats/prometheus/testdata/stats_filter.yaml
@@ -26,6 +26,7 @@ spec:
                   "stat_prefix": "istio",
                 }
               vm_config:
+                vm_id: stats_outbound
                 runtime: envoy.wasm.runtime.null
                 code:
                   inline_string: envoy.wasm.stats
@@ -51,6 +52,7 @@ spec:
                   "stat_prefix": "istio",
                 }
               vm_config:
+                vm_id: stats_inbound
                 runtime: envoy.wasm.runtime.null
                 code:
                   inline_string: envoy.wasm.stats
@@ -76,6 +78,7 @@ spec:
                   "stat_prefix": "istio",
                 }
               vm_config:
+                vm_id: stats_outbound
                 runtime: envoy.wasm.runtime.null
                 code:
                   inline_string: envoy.wasm.stats
