--- a/install/kubernetes/helm/istio/charts/kiali/values.yaml
+++ b/install/kubernetes/helm/istio/charts/kiali/values.yaml
@@ -5,7 +5,7 @@ enabled: false # Note that if using the demo or demo-auth yaml when installing v
 replicaCount: 1
 hub: quay.io/kiali
 image: kiali
-tag: v1.4
+tag: v1.9
 contextPath: /kiali # The root context path to access the Kiali UI.
 nodeSelector: {}
 tolerations: []
@@ -76,3 +76,10 @@ security:
   enabled: false
   cert_file: /kiali-cert/cert-chain.pem
   private_key_file: /kiali-cert/key.pem
+
+excludedWorkloads:
+  - CronJob
+  - Job
+  # - DeploymentConfig
+  # - ReplicationController
+  # - StatefulSet
