--- a/galley/pkg/config/analysis/analyzers/testdata/misannotated.yaml
+++ b/galley/pkg/config/analysis/analyzers/testdata/misannotated.yaml
@@ -95,3 +95,12 @@ spec:
     spec:
       containers:
       - name: fortio
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: staging
+  annotations:
+    # Sidecar injector annoation does not belong to Namespace
+    sidecar.istio.io/inject: "true"
+spec:
