--- a/install/kubernetes/helm/istio/charts/security/values.yaml
+++ b/install/kubernetes/helm/istio/charts/security/values.yaml
@@ -16,7 +16,9 @@ podAnnotations: {}
 # https://istio.io/docs/tasks/security/health-check/
 citadelHealthCheck: false
 # 90*24hour = 2160h
+# The TTL of issued workload certificates.
 workloadCertTtl: 2160h
+# The max TTL of issued workload certificates, workloadCertTtl should be <= maxWorkloadCertTtl .
 maxWorkloadCertTtl: 2160h
 # Environment variables that configure Citadel.
 env: {}
