--- a/galley/pkg/config/analysis/analyzers/testdata/misannotated.yaml
+++ b/galley/pkg/config/analysis/analyzers/testdata/misannotated.yaml
@@ -112,14 +112,4 @@ metadata:
   annotations:
     # Endpoints should not have any Istio annotations
     sidecar.istio.io/statsInclusionPrefixes: cluster.outbound
-subsets:
-- addresses:
-  - ip: 10.36.0.4
-    nodeName: kubernetes-node
-    targetRef:
-      kind: Pod
-      name: test-endpoints-755599958f-qkrk8
-  ports:
-  - name: http
-    port: 8080
-    protocol: TCP
+subsets: []
