--- a/istioctl/cmd/testdata/authz/converter/one-rule-all-services-with-exclusion.golden.yaml
+++ b/istioctl/cmd/testdata/authz/converter/one-rule-all-services-with-exclusion.golden.yaml
@@ -27,7 +27,7 @@ spec:
 apiVersion: security.istio.io/v1beta1
 kind: AuthorizationPolicy
 metadata:
-  name: service-wildcard-0
+  name: service-wildcard-rule0-target0
   namespace: default
 spec:
   rules:
