--- a/istioctl/cmd/testdata/authz/converter/one-rule-multiple-services.golden.yaml
+++ b/istioctl/cmd/testdata/authz/converter/one-rule-multiple-services.golden.yaml
@@ -9,7 +9,7 @@ spec:
 apiVersion: security.istio.io/v1beta1
 kind: AuthorizationPolicy
 metadata:
-  name: service-productpage-0
+  name: service-productpage-rule0-target0
   namespace: default
 spec:
   rules:
@@ -33,7 +33,7 @@ spec:
 apiVersion: security.istio.io/v1beta1
 kind: AuthorizationPolicy
 metadata:
-  name: service-reviews-0
+  name: service-reviews-rule0-target0
   namespace: default
 spec:
   rules:
