--- a/istioctl/cmd/testdata/authz/converter/one-rule-one-service.golden.yaml
+++ b/istioctl/cmd/testdata/authz/converter/one-rule-one-service.golden.yaml
@@ -9,7 +9,7 @@ spec:
 apiVersion: security.istio.io/v1beta1
 kind: AuthorizationPolicy
 metadata:
-  name: service-productpage-0
+  name: service-productpage-rule0-target0
   namespace: default
 spec:
   rules:
