Auto mTLS on by default, fixing the gateway tcp ingress test by throttling (#18312)
* Turn auto mTLS on by default for 1.4 (#18030)

* add mixer mtls ready label only when control plane auth is enabled.

* try it on...

* revert control plane label.

* update isMtlsEnabled criteria

* finish the rest checking file content

* fix the isMtlsEnabled default true, only false when explicitly set.

* add more attempts in fortio/ingress traffic. route takes more time?

* add key file checks for probe in sidecar pilot agent

* remove hack and correct the sds check condition.

* revert change.

* update golden and override in mini

* fix rbac test by disabling mtls explicitly

* additional throttling in the gateway ingress tcp test.

* fix the rabc test by making it more hermetic.

* add mtls crd file.

* remove unused imports

* rename mtls page

--- a/install/kubernetes/helm/istio/values.yaml
+++ b/install/kubernetes/helm/istio/values.yaml
@@ -368,7 +368,7 @@ global:
     # or its DestinationRule does not have TLSSettings specified, Istio configures client side
     # TLS configuration automatically, based on the server side mTLS authentication policy and the
     # availibity of sidecars.
-    auto: false
+    auto: true
 
   # Lists the secrets you need to use to pull Istio images from a private registry.
   imagePullSecrets: []
