Register new CRD for RequestAuthentication

--- a/galley/pkg/config/meta/metadata/metadata.yaml
+++ b/galley/pkg/config/meta/metadata/metadata.yaml
@@ -120,6 +120,10 @@ collections:
     proto: "istio.security.v1beta1.AuthorizationPolicy"
     protoPackage: "istio.io/api/security/v1beta1"
 
+  - name: "istio/security/v1beta1/requestauthentications"
+    proto: "istio.security.v1beta1.RequestAuthentication"
+    protoPackage: "istio.io/api/security/v1beta1"
+
   ### K8s collections ###
 
   # Built-in K8s collections
@@ -240,6 +244,10 @@ collections:
 
   - name: "k8s/security.istio.io/v1beta1/authorizationpolicies"
     proto: "istio.security.v1beta1.AuthorizationPolicy"
+    protoPackage: "istio.io/api/security/v1beta1"
+
+  - name: "k8s/security.istio.io/v1beta1/requestauthentications"
+    proto: "istio.security.v1beta1.RequestAuthentication"
     protoPackage: "istio.io/api/security/v1beta1"
 
     # Keep Legacy Mixer CRD related collections separate, as these will be gone soon.
@@ -522,6 +530,7 @@ snapshots:
       - "istio/rbac/v1alpha1/servicerolebindings"
       - "istio/rbac/v1alpha1/serviceroles"
       - "istio/security/v1beta1/authorizationpolicies"
+      - "istio/security/v1beta1/requestauthentications"
       - "k8s/core/v1/namespaces"
       - "k8s/core/v1/services"
 
@@ -728,6 +737,12 @@ sources:
     - collection: "k8s/security.istio.io/v1beta1/authorizationpolicies"
       kind: "AuthorizationPolicy"
       plural: "authorizationpolicies"
+      group: "security.istio.io"
+      version: "v1beta1"
+
+    - collection: "k8s/security.istio.io/v1beta1/requestauthentications"
+      kind: "RequestAuthentication"
+      plural: "requestauthentications"
       group: "security.istio.io"
       version: "v1beta1"
 
@@ -985,6 +1000,7 @@ transforms:
       "k8s/rbac.istio.io/v1alpha1/clusterrbacconfigs": "istio/rbac/v1alpha1/clusterrbacconfigs"
       "k8s/rbac.istio.io/v1alpha1/serviceroles": "istio/rbac/v1alpha1/serviceroles"
       "k8s/security.istio.io/v1beta1/authorizationpolicies": "istio/security/v1beta1/authorizationpolicies"
+      "k8s/security.istio.io/v1beta1/requestauthentications": "istio/security/v1beta1/requestauthentications"
       "k8s/core/v1/namespaces": "k8s/core/v1/namespaces"
       "k8s/core/v1/services": "k8s/core/v1/services"
       "k8s/core/v1/pods": "k8s/core/v1/pods"
