--- a/install/kubernetes/helm/istio/charts/prometheus/values.yaml
+++ b/install/kubernetes/helm/istio/charts/prometheus/values.yaml
@@ -58,3 +58,20 @@ service:
 
 security:
   enabled: true
+
+persistentVolume:
+  # If true, Prometheus will create/use a Persistent Volume Claim
+  # If false, use emptyDir
+  enabled: false
+  # Prometheus server data Persistent Volume access modes
+  accessModes:
+    - ReadWriteOnce
+  annotations: {}
+  # Prometheus data Persistent Volume existing claim name
+  # Requires server.persistentVolume.enabled: true
+  # If defined, PVC must be created before volume will be bound
+  existingClaim: ""
+  # Prometheus data Persistent Volume mount root path
+  mountPath: /data
+  # Persistent Volume size
+  size: 2Gi
