--- a/galley/pkg/config/analysis/analyzers/testdata/mtls-no-dr.yaml
+++ b/galley/pkg/config/analysis/analyzers/testdata/mtls-no-dr.yaml
@@ -1,3 +1,28 @@
+# A service exists called missing-dr-service
+apiVersion: v1
+kind: Service
+metadata:
+  name: missing-dr-service
+  namespace: missing-dr
+spec:
+  selector:
+    app: missing-dr-service
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 8080
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: missing-dr-service-pod
+  namespace: missing-dr
+  labels:
+    app: missing-dr-service
+spec:
+  containers:
+  - name: istio-proxy
+---
 # Require mTLS for our service
 apiVersion: authentication.istio.io/v1alpha1
 kind: Policy
@@ -9,7 +34,31 @@ spec:
   - name: missing-dr-service
   peers:
   - mtls:
-# Nothing else specified. Without a DR, this will fail.
+# Without a DR, this will fail.
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: has-dr-service
+  namespace: has-dr
+spec:
+  selector:
+    app: has-dr-service
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 8080
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: has-dr-service-pod
+  namespace: has-dr
+  labels:
+    app: has-dr-service
+spec:
+  containers:
+  - name: istio-proxy
 ---
 # We also specify another mtls for another service, but this one has a DR.
 apiVersion: authentication.istio.io/v1alpha1
