--- a/galley/pkg/config/analysis/analyzers/testdata/mtls-with-port.yaml
+++ b/galley/pkg/config/analysis/analyzers/testdata/mtls-with-port.yaml
@@ -13,6 +13,33 @@ spec:
   peers:
   - mtls:
 ---
+apiVersion: v1
+kind: Service
+metadata:
+  name: my-service
+  namespace: my-namespace
+spec:
+  selector:
+    app: my-service
+  ports:
+    - protocol: TCP
+      port: 8080
+      targetPort: 8080
+    - protocol: TCP
+      port: 8081
+      targetPort: 8081
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: my-service-pod
+  namespace: my-namespace
+  labels:
+    app: my-service
+spec:
+  containers:
+  - name: istio-proxy
+---
 apiVersion: networking.istio.io/v1alpha3
 kind: DestinationRule
 metadata:
