fix spelling mistakes

--- a/tests/e2e/tests/pilot/testdata/networking/v1alpha3/sidecar-scope-ns1-ns2.yaml
+++ b/tests/e2e/tests/pilot/testdata/networking/v1alpha3/sidecar-scope-ns1-ns2.yaml
@@ -19,7 +19,7 @@ spec:
     - "*/bookinfo.com"
     - "*/private.com"
     # bookinfo.com is on port 9999.
-    # private.com wont get imported
+    # private.com won't get imported
   - hosts:
     - "ns1/*"
     - "*/*.tcp.com"
