--- a/install/kubernetes/helm/istio/charts/kiali/values.yaml
+++ b/install/kubernetes/helm/istio/charts/kiali/values.yaml
@@ -69,6 +69,12 @@ dashboard:
   jaegerURL:  # If you have Jaeger installed and it is accessible to client browsers, then set this property to its external URL. Kiali will redirect users to this URL when Jaeger tracing is to be shown.
 prometheusAddr: http://prometheus:9090
 
+kubernetesConfig:
+  burst: 200
+  qps: 175
+  cacheEnabled: false
+  cacheDuration: 300
+
 # When true, a secret will be created with a default username and password. Useful for demos.
 createDemoSecret: false
 
