--- a/tests/integration/telemetry/stats/prometheus/testdata/stats_filter.yaml
+++ b/tests/integration/telemetry/stats/prometheus/testdata/stats_filter.yaml
@@ -29,7 +29,8 @@ spec:
                 vm_id: stats_outbound
                 runtime: envoy.wasm.runtime.null
                 code:
-                  inline_string: envoy.wasm.stats
+                  local:
+                    inline_string: envoy.wasm.stats
     - applyTo: HTTP_FILTER
       match:
         context: SIDECAR_INBOUND
@@ -55,7 +56,8 @@ spec:
                 vm_id: stats_inbound
                 runtime: envoy.wasm.runtime.null
                 code:
-                  inline_string: envoy.wasm.stats
+                  local:
+                    inline_string: envoy.wasm.stats
     - applyTo: HTTP_FILTER
       match:
         context: GATEWAY
@@ -81,4 +83,5 @@ spec:
                 vm_id: stats_outbound
                 runtime: envoy.wasm.runtime.null
                 code:
-                  inline_string: envoy.wasm.stats
+                  local:
+                    inline_string: envoy.wasm.stats
