--- a/samples/sleep/sleep-vault.yaml
+++ b/samples/sleep/sleep-vault.yaml
@@ -15,24 +15,6 @@
 ##################################################################################################
 # Sleep service
 ##################################################################################################
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: sleep
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: sleep
-  labels:
-    app: sleep
-spec:
-  ports:
-  - port: 80
-    name: http
-  selector:
-    app: sleep
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -50,7 +32,7 @@ spec:
       serviceAccountName: vault-citadel-sa
       containers:
       - name: sleep
-        image: pstauffer/curl
+        image: governmentpaas/curl-ssl
         command: ["/bin/sleep", "3650d"]
         imagePullPolicy: IfNotPresent
 ---
