--- a/pkg/test/framework/components/redis/redis.yaml
+++ b/pkg/test/framework/components/redis/redis.yaml
@@ -145,7 +145,7 @@ spec:
       serviceAccountName: "default"
       containers:
       - name: redis-release
-        image: "{{ BitnamiHub }}/redis:4.0.12"
+        image: "{{ .BitnamiHub }}/redis:4.0.12"
         imagePullPolicy: "{{.ImagePullPolicy}}"
         command:
           - /run.sh
@@ -254,7 +254,7 @@ spec:
       serviceAccountName: "default"
       containers:
       - name: redis-release
-        image: "{{ BitnamiHub }}/redis:4.0.12"
+        image: "{{ .BitnamiHub }}/redis:4.0.12"
         imagePullPolicy: "{{.ImagePullPolicy}}"
         command:
           - /run.sh
@@ -312,7 +312,7 @@ spec:
           mountPath: /opt/bitnami/redis/etc
       initContainers:
       - name: volume-permissions
-        image: "{{ BitnamiHub }}/minideb:latest"
+        image: "{{ .BitnamiHub }}/minideb:latest"
         imagePullPolicy: "{{.ImagePullPolicy}}"
         command: ["/bin/chown", "-R", "1001:1001", "/data"]
         securityContext:
