--- a/pkg/test/echo/docker/Dockerfile.app_sidecar
+++ b/pkg/test/echo/docker/Dockerfile.app_sidecar
@@ -1,5 +1,4 @@
-# hadolint ignore=DL3006
-FROM istionightly/base_debug
+FROM docker.io/istio/base:${BASE_VERSION}
 
 # Install the certs.
 COPY certs/                           /var/lib/istio/
@@ -20,4 +19,5 @@ COPY envoy_bootstrap_v2.json          /var/lib/istio/envoy/envoy_bootstrap_tmpl.
 COPY echo-start.sh /usr/local/bin/echo-start.sh
 COPY client /usr/local/bin/client
 COPY server /usr/local/bin/server
+
 ENTRYPOINT ["/usr/local/bin/echo-start.sh"]
