add support for http_proxy protocol
Signed-off-by: Rama Chavali <rama.rao@salesforce.com>

--- a/tests/e2e/tests/pilot/testdata/networking/v1alpha3/sidecar-scope-ns1-ns2.yaml
+++ b/tests/e2e/tests/pilot/testdata/networking/v1alpha3/sidecar-scope-ns1-ns2.yaml
@@ -12,7 +12,7 @@ spec:
   egress:
   - port:
       number: 23145
-      protocol: TCP
+      protocol: http_proxy
       name: outbound-tcp
     bind: 7.7.7.7
     hosts:
