add http_proxy to protocol enum
Signed-off-by: Rama Chavali <rama.rao@salesforce.com>

--- a/tests/e2e/tests/pilot/testdata/networking/v1alpha3/sidecar-scope-ns1-ns2.yaml
+++ b/tests/e2e/tests/pilot/testdata/networking/v1alpha3/sidecar-scope-ns1-ns2.yaml
@@ -12,8 +12,8 @@ spec:
   egress:
   - port:
       number: 23145
-      protocol: http_proxy
-      name: outbound-tcp
+      protocol: HTTP_PROXY
+      name: outbound-egress
     bind: 7.7.7.7
     hosts:
     - "*/bookinfo.com"
