Fix pilot e2e istio-egressgateway test case

--- a/tests/e2e/tests/pilot/testdata/rbac/v1alpha1/istio-egressgateway.yaml
+++ b/tests/e2e/tests/pilot/testdata/rbac/v1alpha1/istio-egressgateway.yaml
@@ -21,6 +21,7 @@ apiVersion: networking.istio.io/v1alpha3
 kind: Gateway
 metadata:
   name: istio-egressgateway
+  namespace: istio-system
 spec:
   selector:
     istio: egressgateway
