Use correct port for zipkin service (9411)

--- a/install/kubernetes/helm/istio/charts/tracing/templates/service.yaml
+++ b/install/kubernetes/helm/istio/charts/tracing/templates/service.yaml
@@ -21,7 +21,7 @@ items:
       release: {{ .Release.Name }}
   spec:
     ports:
-      - port: {{ .Values.service.externalPort }}
+      - port: {{ .Values.zipkin.queryPort }}
         targetPort: {{ .Values.zipkin.queryPort }}
         protocol: TCP
         name: {{ .Values.service.name }}
