--- a/galley/testdata/conversion/dataset/extensions/v1beta1/ingress_multihost.yaml
+++ b/galley/testdata/conversion/dataset/extensions/v1beta1/ingress_multihost.yaml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   name: echo
   annotations:
-    kubernetes.io/ingress.class: istio
+    kubernetes.io/ingress.class: cls
 spec:
   rules:
   - host: echo1.example.com
