Add short alias for authorization policy resources

--- a/install/kubernetes/helm/istio-init/files/crd-all.gen.yaml
+++ b/install/kubernetes/helm/istio-init/files/crd-all.gen.yaml
@@ -96,6 +96,8 @@ spec:
     kind: AuthorizationPolicy
     plural: authorizationpolicies
     singular: authorizationpolicy
+    shortNames:
+    - authzpol
   scope: Namespaced
   subresources:
     status: {}
