Enable Istio build on Arm64 platform
1. The Makefile.core.mk is modified for adapting multi-arch
   platform.
2. In init.sh scripts, replace the "amd64" with "GOARCH"
3. Add arch parameter in dockerfile for choosing build
   architecture.
4. Add build options for building multi-arch images in
   istio-docker.mk file
5. Add arm64 option for helm template in values.yaml

Signed-off-by: Jingzhao <Jingzhao.Ni@arm.com>

--- a/docker/Dockerfile.kubectl
+++ b/docker/Dockerfile.kubectl
@@ -5,8 +5,11 @@ ARG BASE_VERSION=latest
 # The following section is used as base image if BASE_DISTRIBUTION=default
 FROM docker.io/istio/base:${BASE_VERSION} as default
 
+# Support Multi-arch
+ARG ARCH=amd64
+
 # This container should only contain kubectl.  Hard-coding to use Linux K8s 1.13.10 version.
-ADD https://storage.googleapis.com/kubernetes-release/release/v1.13.10/bin/linux/amd64/kubectl /usr/bin/kubectl
+ADD https://storage.googleapis.com/kubernetes-release/release/v1.13.10/bin/linux/${ARCH}/kubectl /usr/bin/kubectl
 RUN chmod +x /usr/bin/kubectl
 
 # Ensure a kubectl compatible with the container OS was used.  This is a safety
