--- a/operator/cmd/mesh/testdata/manifest-generate/data-snapshot/charts/base/crds/crd-mixer.yaml
+++ b/operator/cmd/mesh/testdata/manifest-generate/data-snapshot/charts/base/crds/crd-mixer.yaml
@@ -1,5 +1,5 @@
 kind: CustomResourceDefinition
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 metadata:
   name: adapters.config.istio.io
   labels:
@@ -18,18 +18,25 @@ spec:
     plural: adapters
     singular: adapter
     categories:
-    - istio-io
-    - policy-istio-io
+      - istio-io
+      - policy-istio-io
   scope: Namespaced
-  subresources:
-    status: {}
   versions:
     - name: v1alpha2
+      schema:
+        openAPIV3Schema:
+          properties:
+            spec:
+              type: object
+          type: object
       served: true
       storage: true
+      subresources:
+        status: {}
+
 ---
 kind: CustomResourceDefinition
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 metadata:
   name: templates.config.istio.io
   labels:
@@ -48,13 +55,20 @@ spec:
     plural: templates
     singular: template
     categories:
-    - istio-io
-    - policy-istio-io
+      - istio-io
+      - policy-istio-io
   scope: Namespaced
-  subresources:
-    status: {}
   versions:
     - name: v1alpha2
+      schema:
+        openAPIV3Schema:
+          properties:
+            spec:
+              type: object
+          type: object
       served: true
       storage: true
+      subresources:
+        status: {}
 ---
+
