test framework allows getting istiod stats

--- a/pkg/test/framework/features/features.yaml
+++ b/pkg/test/framework/features/features.yaml
@@ -38,6 +38,8 @@ features:
     shifting:
     routing:
     short-circuiting:
+    sidecar:
+      isolation:
     mirroring:
     ingress:
       loadbalancing:
