--- a/operator/cmd/mesh/testdata/manifest-generate/input/minimal.yaml
+++ b/operator/cmd/mesh/testdata/manifest-generate/input/minimal.yaml
@@ -1,7 +1,5 @@
 apiVersion: install.istio.io/v1alpha1
 kind: IstioOperator
 spec:
-  profile: empty
-  components:
-    pilot:
-      enabled: true
+  profile: minimal
+
